@@ -13,6 +13,10 @@ Future of gemc:
 - "ahit" general function to get infos (with auto, c++11) getVector(string), get3Vector(string)
 - remove obsolete cpp materials
 
+8/6/15
+- overloaded get_info with extra argument: fixed bug that affected particles that 
+  contain parenthesis in the name. Volker found this one after 5 minutes of playing with the code!
+
 7/28/15
 - fixed number of material entries for devel (rayleigh makes it 18 not 17)
 - fixed typo on materials api
